tests/baselines/reference/genericCloduleInModule.errors.txt
genericCloduleInModule.ts(12,1): error TS2454: Variable 'b' is used before being assigned.


==== genericCloduleInModule.ts (1 errors) ====
    module A {
        export class B<T> {
            foo() { }
            static bar() { }
        }
        export module B {
            export var x = 1;
        }
    }
    
    var b: A.B<number>;
    b.foo();
    ~
!!! error TS2454: Variable 'b' is used before being assigned.